# AI-Hedge-Fund

FastAPI/: app.py  hedge_fund_model.pkl  main.py  pyproject.toml
